Here's the commented version of the code:

```c++
# Copyright 2021 The gRPC Authors

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# distributed under the License is distributed on an "AS IS" BASIS,

# See the License for the specific language governing permissions and
# limitations under the License.
"""Channelz debug service implementation in gRPC Python."""

from envoy.service.status.v3 import csds_pb2
from envoy.service.status.v3 import csds_pb2_grpc
from google.protobuf import json_format
from grpc._cython import cygrpc

class ClientStatusDiscoveryServiceServicer(
    csds_pb2_grpc.ClientStatusDiscoveryServiceServicer
):
    """CSDS Servicer works for both the sync API and asyncio API.
    
    This servicer implements the Client Status Discovery Service (CSDS) which is
    part of the xDS protocol. It provides methods to fetch and stream the current
    xDS configuration state of the client for debugging purposes.
    """

    @staticmethod
    def FetchClientStatus(request, unused_context):
        """Fetch the current xDS configuration state of the client.
        
        Args:
            request: The CSDS request (unused in current implementation).
            unused_context: gRPC context (unused in current implementation).
            
        Returns:
            A ClientStatusResponse containing the current xDS configurations
            serialized from the gRPC core's configuration dump.
        """
        return csds_pb2.ClientStatusResponse.FromString(
            cygrpc.dump_xds_configs()
        )

    @staticmethod
    def StreamClientStatus(request_iterator, context):
        """Stream the xDS configuration state of the client.
        
        Continuously yields the current xDS configuration whenever requested.
        
        Args:
            request_iterator: Iterator of CSDS requests.
            context: gRPC context for the streaming RPC.
            
        Yields:
            ClientStatusResponse messages containing the current xDS configurations.
        """
        for request in request_iterator:
            yield ClientStatusDiscoveryServiceServicer.FetchClientStatus(
                request, context
            )

def add_csds_servicer(server):
    """Register CSDS servicer to a server.

    CSDS is part of xDS protocol used to expose in-effective traffic
    configuration (or xDS resources). It focuses on simplify the debugging of
    unexpected routing behaviors, which could be due to a misconfiguration,
    unhealthy backends or issues in the control or data plane.

    Args:
        server: A gRPC server to which the CSDS service will be added.
    """
    csds_pb2_grpc.add_ClientStatusDiscoveryServiceServicer_to_server(
        ClientStatusDiscoveryServiceServicer(), server
    )

__all__ = ["ClientStatusDiscoveryServiceServicer", "add_csds_servicer"]
```

Key additions:
1. Enhanced class docstring to better explain the purpose of CSDS
2. Added detailed docstrings for both static methods explaining their purpose, parameters, and return values
3. Maintained existing docstring for add_csds_servicer which was already comprehensive
4. Added comments explaining the streaming nature of StreamClientStatus
5. Clarified the relationship between the methods and the xDS protocol

The comments now provide a complete picture of what the code does and how it fits into the larger xDS debugging infrastructure.